--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -169,22 +169,20 @@
         },
         "title": "Event Log Device Display Sequence"
       },
-      "event_log_configuration": {
+      "format_settings": {
         "data": {
           "log_level": "LOG LEVEL - The type of messages that are added to the HA log file by iCloud3",
-          "display_zone_format": "ZONE NAME FORMAT - Format used to display the Zone name in sensors and the Event Log",
-          "device_tracker_state_format": "DEVICE_TRACKER STATE FORMAT - Format used to display the Zone name in the device_tracker entity",
-          "zone_sensor_evlog_format": "DEVICE TRACKER STATE/ZONE FORMAT OVERRIDE - Display the Formatted Zone Name in the device_tracker entity",
-          "time_format": "TIME FORMAT - Time format for sensors and the Event Log",
-          "unit_of_measurement": "UNIT OF MEASUREMENT - Distance format for sensors and the Event Log",
-          "event_log_card_directory": "EVENT LOG CARD LOVELACE RESOURCES DIRECTORY - Event Log custom card .js file directory",
+          "display_zone_format": "ZONE NAME FORMAT - How the Zone name is displayed in sensors and in the Event Log",
+          "device_tracker_state_format": "DEVICE_TRACKER STATE FORMAT - How the Zone name is displayed in the device_tracker entity",
+          "time_format": "TIME FORMAT - How time fields are displayed in sensors and in the Event Log",
+          "unit_of_measurement": "UNIT OF MEASUREMENT - How distance fieldsare displayed in sensors and in the Event Log",
           "opt_action": "═════════════════════════════════════════════════════"
         },
         "data_description": {
           "zone_sensor_evlog_format": "The HA entity value standard is to display the state value in lower_case with underscores ('_'). This overides that standard and displays the Zone Name Format selected above"
         },
-        "description": "The Event Log displays all tracking activities, messages, location data acceptability, startup device assignments and lets you control some of the iCloud3 operations with the Actions menu. This screen is used to configure how the various messages and data fields should be displayed.",
-        "title": "Event Log Configuration"
+        "description": "Tracking activity, results and information messages are displayed in the Event log, sensors and device_tracker entities for tracked and monitored devices. With this screen, you can specify the how these results should be displayed.",
+        "title": "Format Settings"
       },
       "display_text_as": {
         "data": {
@@ -216,18 +214,25 @@
           "gps_accuracy_threshold": "GPS ACCURACY THRESHOLD",
           "old_location_threshold": "OLD LOCATION THRESHOLD",
           "old_location_adjustment": "OLD LOCATION ADJUSTMENT",
+          "distance_between_devices": "USE LOCATION RESULTS FROM A NEAR-BY DEVICE",
           "max_interval": "MAXIMUM INTERVAL",
+          "exit_zone_interval": "EXIT_ZONE_INTERVAL",
+          "iosapp_alive_interval": "REQUEST IOSAPP LOCATION INTERVAL",
           "tfz_tracking_max_distance": "TRACK-FROM-ZONE DISPLAY DISTANCE",
           "offline_interval": "DEVICE OFFLINE INTERVAL",
           "travel_time_factor": "TRAVEL TIME INTERVAL MULTIPLIER",
+          "event_log_card_directory": "EVENT LOG CARD LOVELACE RESOURCES DIRECTORY - Event Log custom card .js file directory",
           "opt_action": "═════════════════════════════════════════════════════"
         },
         "data_description": {
           "old_location_threshold": "Locations older than this value will be discarded",
           "old_location_adjustment": "Add this to the time that determines if a location is old",
+          "distance_between_devices": "See if there are any other devices that are near the device being updated. If there is, use that device's location results instead of going through the calculation process. This can speed up the update since Waze travel time and distance information does not have to be requested",
           "gps_accuracy_threshold": "Locations with GPS Accuracy above this value will be discarded",
           "tfz_tracking_max_distance": "Normally the Home zone's time and distance data is displayed on the Device's device_tracker and sensor entities. Display the Track-from-Zone instead when the Device is within this distance of the Track-from-Zone",
           "max_interval": "The maximum time between location requests",
+          "exit_zone_interval": "The time to the first location request after exiting a zone",
+          "iosapp_alive_interval": "Send a location request to the iOS App if there has been no contact after this amount of time. This will check to see if the iOS App is responding to location requests or is asleep and not running.",
           "offline_interval": "Location request interval when offline (Airplane mode, dead cell area, etc.)",
           "travel_time_factor": "Next location time = Waze travel time to zone * this value"
         },
@@ -256,12 +261,12 @@
       },
       "waze_main": {
         "data": {
-          "waze_used": "═══════════════ WAZE ROUTE SERVICE ═══════════════",
+          "waze_used": "═══════════════════════════════════════════════════ WAZE ROUTE SERVICE",
           "waze_region": "ROUTE SERVER LOCATION - Location of the Waze Route Server for your area",
           "waze_realtime": "USE REAL TIME DATA - Waze should consider traffic delays when determining travel time",
           "waze_min_distance": "WAZE MINIMUM DISTANCE",
           "waze_max_distance": "WAZE MAXIMUM DISTANCE",
-          "waze_history_database_used": "══════════════ WAZE HISTORY DATABASE ══════════════",
+          "waze_history_database_used": "═══════════════════════════════════════════════════ WAZE HISTORY DATABASE",
           "waze_history_track_direction": "GENERAL TRAVEL DIRECTION - Used to display 'Map Trace Lines' between saved locations",
           "waze_history_max_distance": "HISTORY MAX DISTANCE",
           "opt_action": "═════════════════════════════════════════════════════"
@@ -269,40 +274,33 @@
         "data_description": {
           "waze_min_distance": "Use the Waze Route Service when the zone distance is greater than this value",
           "waze_max_distance": "Do not use the Waze Route Service when the zone distance is greater than than this value",
-          "waze_used": "The Waze Route Service provides the travel time and distance information from your current location to the Home or another tracked from zone. This information is used to determine when the next location request should be made,",
-          "waze_history_max_distance": "Do not save the Waze travel time & distance to the Waze History Database if the distance is greater than this value",
-          "waze_history_database_used": "The Waze History Data base stores 'close to zone' travel time and distance information for a GPS location (100m radius). It reduces the number of internet requests to the Waze Servers after it has been in use for a while and speed up response time when in a poor cell area."
+          "waze_history_max_distance": "Do not save the Waze travel time & distance to the Waze History Database if the distance is greater than this value"
         },
         "title": "Waze - Route Service Travel Time/Distance"
       },
       "special_zones": {
         "data": {
-          "passthru_zone_header":   "══════════════ PASS THROUGH ZONE ════════════════",
+          "passthru_zone_header":   "═══════════════════════════════════════════════════ PASSTHRU ZONE ZONE",
           "passthru_zone_time": "ENTER ZONE DELAY TIME ",
-          "stat_zone_header":       "═══════════════ STATIONARY ZONE ═════════════════",
+          "stat_zone_header":       "═══════════════════════════════════════════════════ STATIONARY ZONE",
           "stat_zone_still_time": "NO MOVEMENT TIME ",
           "stat_zone_inzone_interval": "INZONE INTERVAL ",
-          "stat_zone_fname": "FRIENDLY NAME - Name to display when in a Stationary Zone. This can also be set for each Device on the Update Devices screen.",
-          "waze_history_databsuse": "══════════════ WAZE HISTORY DATABASE ══════════════",
-          "base_offset_header":     "════════════ STATIONARY ZONE BASE LOCATION ══════════",
+          "stat_zone_fname": "FRIENDLY NAME - Name to display when in a Stationary Zone",
+          "base_offset_header":     ".══════════════════════════════════════════ STATIONARY ZONE BASE LOCATION",
           "stat_zone_base_latitude": "BASE LOCATION NORTH-SOUTH OFFSET",
           "stat_zone_base_longitude": "BASE LOCATION EAST/WEST OFFSET",
-          "track_from_zone_header": "════════════ PRIMARY BASE ZONE = HOME ══════════════",
+          "track_from_zone_header":  "═══════════════════════════════════════════════════ PRIMARY BASE ZONE = HOME",
           "track_from_base_zone": "PRIMARY 'HOME' ZONE - Use another zone if you are away from Home for an extended period (Global Override)",
           "track_from_home_zone": "ALSO TRACK FROM HOME ZONE - Continue to track from the Home zone when the Primary Home Zone is not Home",
           "opt_action":             "═══════════════════════════════════════════════════"
         },
         "data_description": {
-          "passthru_zone_header": "You may be driving through a non-tracked zone but not stopping at tne zone. The iOS App issues a Enter Zone trigger when the device enters the zone and changes the device_tracker entity state to the Zone. iCloud3 does not process the Enter Zone trigger until the delay time has passed. This prevents processing a Zone Enter trigger that is immediately followed by a Zone Exit trigger and from cycling the iCloud3 device_tracker and zone sensors from Away (not_home) to the Zone and then back to Away",
           "passthru_zone_time": "Delay processing a Zone Enter Trigger in case you are just passing through a zone",
-          "track_from_zone_header": "Normally, the Home zone is used as the base location for all tracking (travel time, distance, etc).  However, a different zone can be used as the base location if you are away from Home for an extended period or the device is normally at another location (vacation house, second home, parent's house, etc.). This is a global setting that overrides the Base Zone assigned to an individual Device.",
-          "stat_zone_header": "A Stationary Zone is created if the device remains in the same location (store, friends house, doctor's office, etc.) for an extended period of time.",
           "stat_zone_still_time": "Time at the same location before moving into a Stationary Zone",
           "stat_zone_inzone_interval": "Time interval between location requests when in a Stationary Zone",
-          "stat_zone_fname": "Use the wildcard '[name]' to also display part of the device name ('[name]StatZone' --> 'GarStatZone')",
+          "stat_zone_fname": "Set a generic name here or set it for each Device on the Update Devices screen. All devices can display the same name (Stationary) or add the '[name]' wildcard to display part of the device name, followed by some text ('[name]Zone' --> 'GaryZone')",
           "stat_zone_base_latitude": "Distance (±km) north-south of the Home Zone (or it's GPS Latitude)",
-          "stat_zone_base_longitude": "Distance (±km) east-west of the Home Zone (or it's GPS Longitude)",
-          "base_offset_header": "The Stationary Zone is moved to it's 'Base Location' when it is not used by the device. This prevents the iOS App from moving the device into the Stationary Zone when it shouldn`t and helps prevent it from overlapping other zones"
+          "stat_zone_base_longitude": "Distance (±km) east-west of the Home Zone (or it's GPS Longitude)"
         },
         "title": "Special Zones - Pass Through, Stationary Zone, Primay Home Base Zone"
       },
