--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -8,7 +8,7 @@
       "verification_code_accepted": "The Apple ID Verification Code was accepted. Reauthentication is complete",
       "verification_code_cancelled": "The Apple ID Verification was cancelled",
       "update_cancelled": "Update Cancelled",
-      "icloud3_init_error": "A problem was encountered initializing the iCloud3 Configuration Wizard. iCloud3 has probably encountered an error during initialization and was not started. Check the 'home-assistant.log' file for any errors related to iCloud3"
+      "icloud3_init_error": "A problem was encountered initializing the iCloud3 Configure Settings screens. iCloud3 has probably encountered an error during initialization and was not started. Check the 'home-assistant.log' file for any errors related to iCloud3"
     },
     "error": {
       "invalid_path": "The path provided is not valid. Should be in the format `user/repo-name`",
@@ -115,7 +115,7 @@
     },
     "step": {
       "menu": {
-        "title": "iCloud3 Configuration Wizard",
+        "title": "iCloud3 Configure Settings",
         "data": {
           "menu_items": "",
           "action_items": "═════════════════════════════════════════════════════"
@@ -270,6 +270,7 @@
           "offline_interval": "DEVICE OFFLINE INTERVAL",
           "travel_time_factor": "TRAVEL TIME INTERVAL MULTIPLIER",
           "event_log_card_directory": "EVENT LOG CARD LOVELACE RESOURCES DIRECTORY - Event Log custom card .js file directory",
+          "ha_config_ic3_url": "HA INTEGRATIONS > ICLOUD3 CONFIGURE URL - Special URL used to display the Configure Settings screens from the EvLog Icon",
           "action_items": "═════════════════════════════════════════════════════"
         },
         "data_description": {
@@ -282,7 +283,8 @@
           "exit_zone_interval": "The time to the first location request after exiting a zone",
           "iosapp_alive_interval": "Send a location request to the iOS App if there has been no contact after this amount of time. This will check to see if the iOS App is responding to location requests or is asleep and not running.",
           "offline_interval": "Location request interval when offline (Airplane mode, dead cell area, etc.)",
-          "travel_time_factor": "Next location time = Waze travel time to zone * this value"
+          "travel_time_factor": "Next location time = Waze travel time to zone * this value",
+          "ha_config_ic3_url": "Normally, this is blank and iCloud3 will determine the URL for it's Configure Settings screen. However, if there is a problem caused by running HA in a virtual environment, docker or on another device and the actual URL can not be detemined, a 404 not found error may be encountered. If that happens, select it the normal way (HA Devices & Services > Integration > iCloud3 > Configure Settings gear) and copy the URL from the browser into this field."
         }
       },
       "inzone_intervals": {
