--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -1,4 +1,6 @@
-{"config": {
+{
+  "title": "iCloud3 v3: iDevice Tracker",
+  "config": {
     "abort": {
       "config_update_complete": "iCloud3 configuration updated successfully",
       "already_configured": "iCloud3 is already installed and can not be installed again. Select CONFIGURE in the iCloud3 Integration entry to configure iCloud3. If you are deleting and then reinstalling, restart HA first and then reinstall iCloud3",
@@ -219,8 +221,8 @@
         "description": "Tracking activity, results and information messages are displayed in the Event log, sensors and device_tracker entities for tracked and monitored devices. With this screen, you can specify the how these results should be displayed.",
         "data": {
           "log_level": "LOG LEVEL - The type of messages that are added to the HA log file by iCloud3",
-          "display_zone_format": "ZONE NAME FORMAT - How the Zone name is displayed in sensors and in the Event Log",
-          "device_tracker_state_format": "DEVICE_TRACKER STATE FORMAT - How the Zone name is displayed in the device_tracker entity",
+          "display_zone_format": "EVENT LOG ZONE DISPLAY NAME - How the Zone name is displayed in sensors and the Event Log",
+          "device_tracker_state_source": "DEVICE TRACKER STATE VALUE - How the device's device_tracker entity state value is determined",
           "time_format": "TIME FORMAT - How time fields are displayed in sensors and in the Event Log",
           "unit_of_measurement": "UNIT OF MEASUREMENT - How distance fieldsare displayed in sensors and in the Event Log",
           "display_gps_lat_long": "DISPLAY GPS COORDINATES - Display the GPS (Latitude, Longitude/±Accuracy) or only the GPS (/±Accuracy) in the Event Log",
@@ -228,6 +230,7 @@
           "action_items": "═════════════════════════════════════════════════════"
         },
         "data_description": {
+          "device_tracker_state_source": "HA uses the device's gps coordinates to determine the zone. The gps accuracy is not considered so the zone may be exited when the gps wanders out of the zone. iCloud3 does consider the gps accuracy and will not exit the zone when this occurs. iCloud3 will display the Zone's Friendly Name or zone name displayed on the Event Log."
         }
       },
       "display_text_as": {
@@ -270,7 +273,7 @@
           "offline_interval": "DEVICE OFFLINE INTERVAL",
           "travel_time_factor": "TRAVEL TIME INTERVAL MULTIPLIER",
           "event_log_card_directory": "EVENT LOG CARD LOVELACE RESOURCES DIRECTORY - Event Log custom card .js file directory",
-          "ha_config_ic3_url": "HA INTEGRATIONS > ICLOUD3 CONFIGURE URL - Special URL used to display the Configure Settings screens from the EvLog Icon",
+          "event_log_btnconfig_url": "EVENT LOG CONFIGURE BUTTON (GEAR) URL > Special URL that display's the HA Configure Settings screen",
           "action_items": "═════════════════════════════════════════════════════"
         },
         "data_description": {
