iCloud3 v3, Release Candidate 2

--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -1,3 +1,10 @@
+rc2 - Release Candidate 2 - 8/8/2023
+...............................
+1. Fixed the problem causing the `duplicate_msg` error during start up.
+2. Services - Added the iCloud3 Service Calls to the Developer tools > Services screen.
+3. Cleaned up some code.
+
+
 rc1 - Release Candidate 1 - 8/6/2023
 ...............................
 1. Event Log - Changed the text on the heading for each update. Now the Arrival Time (if going towards Home or another Track-fromZone) or the Next Update time is displayed.
