--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -1,3 +1,8 @@
+pr1.4
+...............................
+1. Bug Fix - Fixes a "type object 'GlobalVariables' has no attribute 'this_update_tine'" error. it should be '_time', not '_tine'
+2. Stationary Zones - The Stationary Zone is now deleted when all devices have exited from it instead of moving it badk to it's 'base' location.
+
 patch pr1.2 - Prerelease 1.2- 8/23/2023
 ...............................
 1. Battery - Fixed a problem where the battery level/status was not being updated immediately in the Event Log when it went from 'charging' to 'not charging' or 'not charging' to 'charging'.
