--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -1,7 +1,12 @@
 pr1.4
 ...............................
 1. Bug Fix - Fixes a "type object 'GlobalVariables' has no attribute 'this_update_tine'" error. it should be '_time', not '_tine'
-2. Stationary Zones - The Stationary Zone is now deleted when all devices have exited from it instead of moving it badk to it's 'base' location.
+2. Fixed a problem adding the first device to a new iCloud3 installation that was generating a 'TypeError: 'NoneType' object is not callable -- Gb.async_add_entities_device_tracker(NewDeviceTrackers, True) error message.
+3. Stationary zones - Stationary zones are now removed from HA Zones instead of moving them back to their 'base' location when all of the devices have exited the zone. Monitored devices will no longer create a stationary zone since they are not actually tracked.
+4. Error handling - If a device goes offline for an extended period of time (in Airplane mode) the longest interval was changed from 2-hours to 1-hour. An iOS App Location Request will be made when the interval time changes to see if the device is now available for tracking.
+
+
+
 
 patch pr1.2 - Prerelease 1.2- 8/23/2023
 ...............................
